--- a/.cargo/config
+++ b/.cargo/config
@@ -10,4 +10,4 @@ rustflags = [
 runner = "qemu-system-arm -cpu cortex-m3 -machine lm3s6965evb -nographic -semihosting-config enable=on,target=native -kernel"
 
 [build]
-target = "thumbv7em-none-eabi"
+target = "thumbv7em-none-eabihf"
